# skald

./: .gitignore  CMakeLists.txt  LICENSES.txt  Makefile  QUICK_START.md  README.md  git-pull.sh  git-push.sh  git-sync.sh  setup-git-token.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: BUILD.md  GITHUB_SETUP.md  PUSH_TO_GITHUB.md  QUICK_START.md
